--- a/sitebuilder/sitebuilder/templates/base.html
+++ b/sitebuilder/sitebuilder/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load staticfiles compress %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,10 +7,16 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	{% compress css%}
 	<link href="{% static "css/site.css" %}" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
+	{% endcompress %}
+
+	{%compress js%}
 	<script type="text/javascript" src="{% static "js/jquery-3.2.1.min.js" %}"></script>
 	<script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
+	{%endcompress%}
+	
 	<title>{{slug_tmp}}</title>
 </head>
 <body id="{% block body-id %}body{% endblock body-id %}">
